--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 //#d4e6f2       
 
                 FB.init({
-                    appId: mykey,
+                    appId: 149129182478024,
                     autoLogAppEvents: true,
                     xfbml: true,
                     version: 'v2.10'
@@ -102,7 +102,7 @@
             }(document, 'script', 'facebook-jssdk'));
 
         </script>
-        <div id='lala'>ola</div>
+        <div id='lala'></div>
        
     </body>
 </html>
