--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         </script>
         <div id='lala'></div>
-       
+       <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
     </body>
 </html>
 
