--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         var token = accessToken.toString();
                         var res = getInfo(search, token);
                         var cnt = 0;
-                        document.getElementById('lala').innerHTML = 'oooi';
+                        document.getElementById('lala').innerHTML = res;
 
                     } else {
                     }
