--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         var token = accessToken.toString();
                         var res = getInfo(search, token);
                         var cnt = 0;
-                        document.getElementById('lala').innerHTML = token;
+                       // document.getElementById('lala').innerHTML = token;
 
                     } else {
                     }
