--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type='text/javascript' src='config2.js'></script>
-<script type='text/javascript' src='script.js'></script>
         <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="bootstrap-3.3.7-dist/css/shop-homepage.css" rel="stylesheet">
         <title>App</title>
@@ -51,7 +49,7 @@
                 });
                 FB.AppEvents.logPageView();
                 if (search !== null) {
-                    function getInfo(search, token) {
+                    function getInfo(token) {
                         var url = "";
                         url = "search?q=\"" + 'jogos' + "\"&type=group&limit=250&fields=picture,name,privacy,description&access_token=" + token;
                         FB.api(
@@ -79,7 +77,7 @@
                     if (response.status === 'connected') {
                         accessToken = response.authResponse.accessToken;
                         var token = accessToken.toString();
-                        var res = getInfo(search, token);
+                        var res = getInfo(token);
                         var cnt = 0;
                        // document.getElementById('lala').innerHTML = token;
 
