--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="bootstrap-3.3.7-dist/css/shop-homepage.css" rel="stylesheet">
+        <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="shop-homepage.css" rel="stylesheet">
         <title>App</title>
         <style>
 
