--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
                     <a class="navbar-brand" style="margin-top: 4px;"><b>Aplicação para grupos</b></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a style="margin-top: 4px;" href="http://www.localhostfer.com/AppFer2/web/index.html"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
+                    <li><a style="margin-top: 4px;" href="#"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
                 </ul>
 
             </div>
