--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 console.log(res.length);
                                 if (array3[2] === 'undefined')
                                     desc = "Não há uma descrição para este grupo";
-                                str3 += '<a title="' + desc + '" href="https://fernandacanazzo.github.io/teste2/index.html" class="list-group-item" name="grupos" value="' + array3[4] + "_;_" + array3[6] + '" >' + array3[0] + ' ' + array3[6] + '</a> ' +
+                                str3 += '<a title="' + desc + '" href="https://fernandacanazzo.github.io/teste2/menu.html" class="list-group-item" name="grupos" value="' + array3[4] + "_;_" + array3[6] + '" >' + array3[0] + ' ' + array3[6] + '</a> ' +
                                         '<a  href="http://www.facebook.com/groups/' + array3[4] + '"" target="_blank" class="list-group-item" name="grupos" style="display: block; font-size:small; height: 36px;background-color:#f9f9f9;color:#158cba"><span class="glyphicon glyphicon-eye-open" style="margin-right: 6px;"></span> <b>Ver grupo no Facebook</b></a>';
 
                             }
@@ -182,7 +182,7 @@
                 });
                 localStorage.setItem("id_grupo", id_grupo);
 
-                return location.href = 'https://fernandacanazzo.github.io/teste2/index.html';
+                return location.href = 'https://fernandacanazzo.github.io/teste2/menu.html';
             }
 
         </script>
@@ -193,7 +193,7 @@
                     <a class="navbar-brand" style="margin-top: 4px;"><b>Aplicação para grupos</b></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a style="margin-top: 4px;" href="https://fernandacanazzo.github.io/teste2/"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
+                    <li><a style="margin-top: 4px;" href="https://fernandacanazzo.github.io/teste2/index.html"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
                 </ul>
 
             </div>
