--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/shop-homepage.css" rel="stylesheet">
                 <script type='text/javascript' src='js/config2.js'></script>
-<script type='text/javascript' src='js/script.js></script>
+<script type='text/javascript' src='js/script.js'></script>
         <title>App</title>
         <style>
 
