--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 //#d4e6f2       
 
                 FB.init({
-                    appId: mykey.toString(),
+                    appId: config2.MY_KEY,
                     autoLogAppEvents: true,
                     xfbml: true,
                     version: 'v2.10',
