--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 //#d4e6f2       
 
                 FB.init({
-                    appId: config2.MY_KEY,
+                    appId: mykey,
                     autoLogAppEvents: true,
                     xfbml: true,
                     version: 'v2.10',
