--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/shop-homepage.css" rel="stylesheet">]
+        <link href="css/shop-homepage.css" rel="stylesheet">
 <script type='text/javascript' src='js/config2.js'></script>
         <title>App</title>
         <style>
