--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/shop-homepage.css" rel="stylesheet">
-<script type='text/javascript' src='js/config2.js'></script>
         <title>App</title>
         <style>
 
@@ -72,7 +71,7 @@
                 //#d4e6f2       
 
                 FB.init({
-                    appId: config2.MY_KEY,
+                    appId: '149129182478024',
                     autoLogAppEvents: true,
                     xfbml: true,
                     version: 'v2.10',
