--- a/menu.html
+++ b/menu.html
@@ -193,7 +193,7 @@
                 var nome1 = $("#nome1").val();
                 localStorage.setItem("numero1", numero1);
                 localStorage.setItem("nome1", nome1);
-                location.href = 'http://www.fernandacanazzo.github.io/teste2/01.html';
+                location.href = 'http://www.fernandacanazzo.github.io/teste2/publicacoes_mais_recentes.html';
             }
 
             // localStorage.setItem("numero2", numero2);
