--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                     <a class="navbar-brand" style="margin-top: 4px;"><b>Aplicação para grupos</b></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a style="margin-top: 4px;" href="https://www.fernandacanazzo.github.io/teste2/index.html"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
+                    <li><a style="margin-top: 4px;" href="https://fernandacanazzo.github.io/teste2/index.html"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
                 </ul>
 
             </div>
@@ -39,7 +39,7 @@
 
                 <div class="col-md-12">
                     <div class="panel-body text-center" style="background-color: #fefefe;">
-                        <button class="btn btn-xs btn-default text-left" id="voltar" style="display:block; position: fixed; margin-top:10px;font-size:large;border-bottom-style:none; height:30px; width:30px;border-radius: 50%;" type="button" onclick="location.href = 'https://www.fernandacanazzo.github.io/teste2/index.html;'"><span class="glyphicon glyphicon-arrow-left" style="color:#333333"></span></button>
+                        <button class="btn btn-xs btn-default text-left" id="voltar" style="display:block; position: fixed; margin-top:10px;font-size:large;border-bottom-style:none; height:30px; width:30px;border-radius: 50%;" type="button" onclick="location.href = 'https://fernandacanazzo.github.io/teste2/index.html;'"><span class="glyphicon glyphicon-arrow-left" style="color:#333333"></span></button>
 
                         <h2 id="nome"></h2>
 
@@ -193,7 +193,7 @@
                 var nome1 = $("#nome1").val();
                 localStorage.setItem("numero1", numero1);
                 localStorage.setItem("nome1", nome1);
-                location.href = 'https://www.fernandacanazzo.github.io/teste2/publicacoes_mais_recentes.html';
+                location.href = 'https://fernandacanazzo.github.io/teste2/publicacoes_mais_recentes.html';
             }
 
             // localStorage.setItem("numero2", numero2);
