--- a/publicacoes_mais_recentes.html
+++ b/publicacoes_mais_recentes.html
@@ -45,7 +45,7 @@
             setTimeout(function () {
 
                            window.fbAsyncInit();
-                           location.href = 'https://www.fernandacanazzo.github.io/teste2/vis_publicacoes_mais_recentes.html';
+                           location.href = 'https://fernandacanazzo.github.io/teste2/vis_publicacoes_mais_recentes.html';
             
                     }, 20000);
     
