--- a/vis_publicacoes_mais_recentes.html
+++ b/vis_publicacoes_mais_recentes.html
@@ -39,7 +39,7 @@
                     <a class="navbar-brand" style="margin-top: 4px;"><b>Aplicação para grupos</b></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a style="margin-top: 4px;" href="http://www.fernandacanazzo.github.io/teste2/index.html"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
+                    <li><a style="margin-top: 4px;" href="http://fernandacanazzo.github.io/teste2/index.html"><span class="glyphicon glyphicon-search " style=" font-size:small;margin-right: 6px;"></span>Pesquisar grupo</a></li>
                 </ul>
 
             </div>
