--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
 
                 <div class="col-md-12">
                     <div class="panel-body text-center" style="background-color: #fefefe;">
-                        <button class="btn btn-xs btn-default text-left" id="voltar" style="display:block; position: fixed; margin-top:10px;font-size:large;border-bottom-style:none; height:30px; width:30px;border-radius: 50%;" type="button" onclick="location.href = 'https://fernandacanazzo.github.io/teste2/index.html;'"><span class="glyphicon glyphicon-arrow-left" style="color:#333333"></span></button>
+                        <button class="btn btn-xs btn-default text-left" id="voltar" style="display:block; position: fixed; margin-top:10px;font-size:large;border-bottom-style:none; height:30px; width:30px;border-radius: 50%;" type="button" onclick="location.href = 'https://fernandacanazzo.github.io/teste2/index.html'"><span class="glyphicon glyphicon-arrow-left" style="color:#333333"></span></button>
 
                         <h2 id="nome"></h2>
 
