--- a/vis_palavras_publicacoes.html
+++ b/vis_palavras_publicacoes.html
@@ -100,7 +100,7 @@
         </div>
 
         <script>
-            var numero = localStorage.getItem("numero");
+            var numero = 50;
             var palavra = localStorage.getItem("palavra");
             var quant = localStorage.getItem("quant");
             var str_pronta = localStorage.getItem("str_pronta");
