--- a/palavras_publicacoes.html
+++ b/palavras_publicacoes.html
@@ -48,7 +48,7 @@
             }
 
             window.fbAsyncInit = function () {
-                var numero = localStorage.getItem("numero");
+                var numero = 50;
                 var palavra = $("#palavra").val();
                 localStorage.setItem("palavra", palavra);
                 var y = 0;
