--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@
                             <div class="col-md-5">
                                 <div class="panel panel-primary text-left" id="panel2" style="border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe; border-bottom-color:#fefefe; margin-left:-25px;height:150px; width: 100%; background-color: #fbfbfb">
                                     <div class="panel-body" id="div2" style="height:105px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe;">
-                                        <span class="glyphicon glyphicon-comment" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="#">Publicações mais recentes comentadas por alguém em um período</a> 
+                                        <span class="glyphicon glyphicon-comment" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="https://fernandacanazzo.github.io/teste2/publicacoes_periodo.html">Publicações mais recentes comentadas por alguém em um período</a> 
                                     </div>
                                     <div class="panel-body" id="div22" style="border-top-color:#f6f6f6; border-top-style: solid; border-top-width: 1px; background-color: #f6f6f6; height:44px">
                                         <a href="#" id="ler2" class="text-left text-primary" onclick="clickar2();"> <span class="glyphicon glyphicon-plus" style="font-size: large; margin-right: 6px;"></span></a><p id="p2"><br>&nbsp</p>
@@ -101,7 +101,7 @@
                             <div class="col-md-5  col-md-offset-1">
                                 <div class="panel panel-primary text-left" id="panel3" style="margin-top:-15px;margin-right:25px;border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe; border-bottom-color:#fefefe;height:150px; width: 100%; background-color: #fbfbfb">
                                     <div class="panel-body" id="div3" style="height:105px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe;">
-                                        <span class="glyphicon glyphicon-search" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="#">Quantidade de publicações com uma palavra específica</a> 
+                                        <span class="glyphicon glyphicon-search" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="https://fernandacanazzo.github.io/teste2/palavras_publicacoes.html">Quantidade de publicações com uma palavra específica</a> 
                                     </div>
                                     <div class="panel-body" id="div33" style="border-top-color:#f6f6f6; border-top-style: solid; border-top-width: 1px; background-color: #f6f6f6; height:44px">
                                         <a href="#panel3" id="ler3" class="text-left text-primary" onclick="clickar3();"> <span class="glyphicon glyphicon-plus" style="font-size: large; margin-right: 6px;"></span></a><p id="p3"><br>&nbsp</p>
@@ -116,7 +116,7 @@
                             <div class="col-md-5">
                                 <div class="panel panel-primary text-left" id="panel4" style="margin-top:-15px;margin-left:-25px;border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe; border-bottom-color:#fefefe;height:150px; width: 100%; background-color: #fbfbfb">
                                     <div class="panel-body" id="div4" style="height:105px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe;">
-                                        <span class="glyphicon glyphicon-thumbs-up" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="#">Quantidade de publicações por dia e suas reações</a> 
+                                        <span class="glyphicon glyphicon-thumbs-up" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="https://fernandacanazzo.github.io/teste2/quantidade_publicacoes.html">Quantidade de publicações por dia e suas reações</a> 
                                     </div>
                                     <div class="panel-body" id="div44" style="border-top-color:#f6f6f6; border-top-style: solid; border-top-width: 1px; background-color: #f6f6f6; height:44px">
                                         <a href="#panel4"  id="ler4" class="text-left text-primary" onclick="clickar4();"> <span class="glyphicon glyphicon-plus" style="font-size: large; margin-right: 6px;"></span></a><p id="p4"><br>&nbsp</p>
@@ -134,7 +134,7 @@
                             <div class="col-md-5 col-md-offset-1">
                                 <div class="panel panel-primary text-left" id="panel5" style="margin-top:-15px;margin-right:25px;border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe; border-bottom-color:#fefefe;height:150px; width: 100%; background-color: #fbfbfb">
                                     <div class="panel-body" id="div5" style="height:105px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe;">
-                                        <span class="glyphicon glyphicon-star" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="#">N publicações mais populares</a> 
+                                        <span class="glyphicon glyphicon-star" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="https://fernandacanazzo.github.io/teste2/popularidade.html">N publicações mais populares</a> 
                                     </div>
                                     <div class="panel-body" id="div55" style="border-top-color:#f6f6f6; border-top-style: solid; border-top-width: 1px; background-color: #f6f6f6; height:44px">
                                         <a href="#panel5" id="ler5" class="text-left text-primary" onclick="clickar5();"> <span class="glyphicon glyphicon-plus" style="font-size: large; margin-right: 6px;"></span></a><p id="p5"><br>&nbsp</p>
@@ -149,7 +149,7 @@
                             <div class="col-md-5">
                                 <div class="panel panel-primary text-left" id="panel6" style="margin-top:-15px;margin-left:-25px;border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe; border-bottom-color:#fefefe;height:150px; width: 100%; background-color: #fbfbfb">
                                     <div class="panel-body" id="div6" style="height:105px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe;">
-                                        <span class="glyphicon glyphicon-stats" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="#">Reações às publicações mais recentes</a> 
+                                        <span class="glyphicon glyphicon-stats" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="https://fernandacanazzo.github.io/teste2/reacoes.html">Reações às publicações mais recentes</a> 
                                     </div>
                                     <div class="panel-body" id="div66" style="border-top-color:#f6f6f6; border-top-style: solid; border-top-width: 1px; background-color: #f6f6f6; height:44px">
                                         <a href="#panel6"  id="ler6" class="text-left text-primary" onclick="clickar6();"> <span class="glyphicon glyphicon-plus" style="font-size: large; margin-right: 6px;"></span></a><p id="p6"><br>&nbsp</p>
@@ -167,7 +167,7 @@
                             <div class="col-md-5 col-md-offset-1">
                                 <div class="panel panel-primary text-left" id="panel7" style="margin-top:-15px;margin-right:25px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe; border-bottom-color:#fefefe;height:150px; width: 100%; background-color: #fbfbfb">
                                     <div class="panel-body" id="div7" style="height:105px; border-left-color:#fefefe; border-right-color:#fefefe; border-top-color:#fefefe;">
-                                        <span class="glyphicon glyphicon-comment" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="#">Pessoas que mais comentaram</a> 
+                                        <span class="glyphicon glyphicon-comment" style="font-size: x-large; color:#cccccc;margin-right: 12px; margin-top:12px;"></span><a style="color: #333333; font-size: x-large; text-decoration: none;" href="https://fernandacanazzo.github.io/teste2/pessoas_mais_comentarios.html">Pessoas que mais comentaram</a> 
                                     </div>
                                     <div class="panel-body" id="div77" style="border-top-color:#f6f6f6; border-top-style: solid; border-top-width: 1px; background-color: #f6f6f6; height:44px">
                                         <a href="#panel7"  id="ler7" class="text-left text-primary" onclick="clickar7();"> <span class="glyphicon glyphicon-plus" style="font-size: large; margin-right: 6px;"></span></a><p id="p7"><br>&nbsp</p>
