--- a/palavras_publicacoes.html
+++ b/palavras_publicacoes.html
@@ -41,7 +41,7 @@
                         document.getElementById('aviso3').style.display = "none";
                  
                         window.fbAsyncInit();
-                        location.href = 'http://www.fernandacanazzo.github.io/teste2/vis_palavras_publicacoes.html';
+                        location.href = 'https://fernandacanazzo.github.io/teste2/vis_palavras_publicacoes.html';
                     
                     }, 20000);
                 }
