--- a/quantidade_publicacoes.html
+++ b/quantidade_publicacoes.html
@@ -32,14 +32,14 @@
 
             setTimeout(function () {
                 window.fbAsyncInit();
-                location.href = 'http://www.fernandacanazzo.github.io/teste2/vis_quantidade_publicacoes.html';
+                location.href = 'https://fernandacanazzo.github.io/teste2/vis_quantidade_publicacoes.html';
 
             }, 50000);
 
 
 
             window.fbAsyncInit = function () {
-                var numero = localStorage.getItem("numero");
+                var numero = 50;
                 var y = 0;
 
                 FB.init({
