--- a/reacoes.html
+++ b/reacoes.html
@@ -54,7 +54,7 @@
                     }, 50000);
 
             window.fbAsyncInit = function () {
-                var numero = localStorage.getItem("numero");
+                var numero = 50;
 
                 FB.init({
                     appId: '149129182478024',
