--- a/popularidade.html
+++ b/popularidade.html
@@ -73,7 +73,7 @@
             }
 
             window.fbAsyncInit = function () {
-                var numero2 = $("#numero").val();
+                var numero2 = 50;
                 localStorage.setItem("numero2", numero2);
                 var y = 0;
                 var a = 0;
