--- a/pessoas_mais_comentarios.html
+++ b/pessoas_mais_comentarios.html
@@ -35,7 +35,7 @@
 
 
             window.fbAsyncInit = function () {
-                var numero = localStorage.getItem("numero");
+                var numero = 50;
                 var y = 0;
 
                 FB.init({
