--- a/publicacoes_periodo.html
+++ b/publicacoes_periodo.html
@@ -37,7 +37,7 @@
                         document.getElementById('bt_principal').className = "btn btn-xs btn-primary text-center";
                         document.getElementById('aviso3').style.display = "none";
                         window.fbAsyncInit();
-                      location.href = 'http://www.fernandacanazzo.github.io/teste2/vis_publicacoes_periodo.html';
+                      location.href = 'https://fernandacanazzo.github.io/teste2/vis_publicacoes_periodo.html';
                     }, 20000);
                 }
             }
